implement CNA RSS parser
SDESK-5165 EWTN-53

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,19 @@ language: python
 
 python: "3.5"
 
-sudo: false
-dist: trusty
+dist: bionic
 
 services:
-    - mongodb
-    - elasticsearch
-    - redis-server
-
-addons:
-  apt:
-    sources:
-    - mongodb-3.0-precise
-    packages:
-    - mongodb-org-server
+    - docker
 
 cache:
-  directories:
-    - $HOME/.cache/pip
-    - $HOME/.npm
+    - pip
+    - npm
 
-before_install:
-    - nvm install 6.10
-    - nvm use 6.10
-    - node --version
-    - npm install -g npm@3
-    - npm install -g grunt-cli
+jobs:
+    include:
+        - script: cd client && npm install && node --max_old_space_size=4098 node_modules/.bin/grunt build
+          name: "client"
+        - script: cd server && pip install -r dev-requirements.txt && flake8 && nosetests tests
+          name: "server"
 
-install:
-    - cd server && pip install -r dev-requirements.txt && cd ..
-    - cd client && npm install && cd ..
-
-script:
-    - cd server && flake8 && cd ..
-    - cd client && grunt build && cd ..
-    - cd server && python manage.py users:create -u test -p test -e test@localhost --admin && cd ..
