--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "1.33.5",
-        "superdesk-publisher": "superdesk/superdesk-publisher#2.1"
+        "superdesk-core": "2.3.0",
+        "superdesk-publisher": "superdesk/superdesk-publisher#master"
     }
 }
