--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,15 @@
     "name": "superdesk",
     "license": "GPL-3.0",
     "dependencies": {
-        "superdesk-core": "2.1.3",
-        "superdesk-publisher": "github:superdesk/superdesk-publisher#master"
+        "superdesk-analytics": "github:superdesk/superdesk-analytics#v2.1.2",
+        "superdesk-core": "github:superdesk/superdesk-client-core#v2.3.1",
+        "superdesk-publisher": "github:superdesk/superdesk-publisher#master",
+        "superdesk-planning": "2.3.1"
+    },
+    "devDependencies": {
+        "@superdesk/build-tools": "^1.0.14"
+    },
+    "scripts": {
+        "build": "npx @superdesk/build-tools build-root-repo ./"
     }
 }
