--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "superdesk-analytics": "github:superdesk/superdesk-analytics#v2.1.2",
-        "superdesk-core": "github:superdesk/superdesk-client-core#v2.3.1",
+        "superdesk-core": "github:superdesk/superdesk-client-core#hotfix/2.3.3",
         "superdesk-publisher": "github:superdesk/superdesk-publisher#master",
         "superdesk-planning": "2.3.1"
     },
