--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,5 @@
 gunicorn==20.0.4
 honcho==1.0.1
 
--e git+git://github.com/superdesk/superdesk-core.git@v2.3.3#egg=superdesk-core
+-e git+git://github.com/superdesk/superdesk-core.git@release/2.4#egg=superdesk-core
 superdesk-planning==2.3.1
