--- a/server/requirements.in
+++ b/server/requirements.in
@@ -1,5 +1,5 @@
 gunicorn==20.0.4
 honcho==1.0.1
 
-git+https://github.com/superdesk/superdesk-core.git@hotfix/2.4.5#egg=superdesk-core
+git+https://github.com/superdesk/superdesk-core.git@v2.4.5#egg=superdesk-core
 superdesk-planning==2.3.1
