--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -226,7 +226,7 @@ six==1.16.0
     #   flask-oidc-ex
     #   oauth2client
     #   python-dateutil
-superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@hotfix/2.4.5
+superdesk-core @ git+https://github.com/superdesk/superdesk-core.git@v2.4.5
     # via -r requirements.in
 superdesk-planning==2.3.1
     # via -r requirements.in
