--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
         "superdesk-publisher": "github:superdesk/superdesk-publisher#master"
     },
     "devDependencies": {
-        "@superdesk/build-tools": "^1.0.14"
+        "@superdesk/build-tools": "^1.0.14",
+        "@types/node": "^14.14.31"
     },
     "scripts": {
         "build": "npx @superdesk/build-tools build-root-repo ./"
