--- a/server/Procfile
+++ b/server/Procfile
@@ -1,5 +1,5 @@
 rest: gunicorn -c gunicorn_config.py wsgi
 wamp: python3 -u ws.py
 work: celery -A worker worker
-beat: celery -A worker beat --pid=
+beat: celery -A worker beat
 capi: gunicorn -c gunicorn_config.py content_api.wsgi
